# CLIP_Comparador

./: .dockerignore  .flake8  .gitignore  .railway-force-deploy  .railway-rebuild  .railwayignore  ADMIN_README.md  Dockerfile  Dockerfile.backup  LICENSE  PRODUCTION.md  Procfile.railway  RAILWAY_DEPLOY.md  README.md  admin_config.json  admin_panel.py  app.py  app_railway.py  app_railway_production.py  app_simple.py  app_simple_backup.py  auto_preclassify.py  azure-pipelines.yml  deploy-azure-container.ps1  diagnostico_gorras.py  generate_embeddings.py  generate_metadata.py  gunicorn.conf.py  manual_classifier.py  metadata.json  production_server.py  pyproject.toml  railway-setup.sh  railway.json  render.yaml  requirements-lite.txt  requirements-railway.txt  requirements.txt  setup.sh  start.sh  (+5 more)
.azure/: config
.github/workflows/: master_clipvisualsearch.yml
auth/: authentication.py
catalogo/: embeddings.json  product_classifications.json
config/: categories.py  settings.py
core/: classification.py  image_processing.py  search_engine.py  search_engine_new.py
docs/: API.md  CATEGORIAS_OFICIALES.md
models/: clip_model.py
routes/: auth_routes.py  main_routes.py
static/: placeholder.html
templates/: admin_categories.html  admin_dashboard.html  admin_login.html  admin_metadata.html  admin_panel.html  admin_settings.html  classify_single.html  edit_metadata.html  index.html  login.html  manual_classifier.html  product_detail.html
utils/: helpers.py
