# Configuración para Azure Web Apps
[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "clip-comparador"
version = "1.0.0"
description = "Sistema de búsqueda visual inteligente con CLIP"

[tool.azure]
python_version = "3.10"
startup_command = "python app_simple.py"

# Configuración de linting para CLIP Comparador
[tool.flake8]
max-line-length = 150
extend-ignore = ["E501", "W503", "E203", "W391", "E302", "E305", "E722", "E741", "W291"]
per-file-ignores = [
    "app_simple.py:E501,E302,E305,W291,E722,E741",
    "config/categories.py:E501"
]
exclude = [".git", "__pycache__", "venv", ".venv", "*.egg-info", "build", "dist"]

[tool.pylint]
max-line-length = 150
disable = ["line-too-long", "missing-docstring", "invalid-name"]